# aws-iot-device-client-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/awsiotclient/: __init__.py  classic_shadow.py  dictdiff.py  jobs.py  mqtt.py  named_shadow.py  pubsub.py  shadow.py
test/: README.md  common.py  env.sh  test_classic_shadow.py  test_dictdiff.py  test_jobs.py  test_named_shadow.py
test/e2e/: test_mqtt.py  test_named_shadow.py  test_pubsub.py
test/unit/: conftest.py  test_classic_shadow.py  test_jobs.py  test_jobs_callbacks.py  test_mqtt.py  test_named_shadow.py  test_pubsub.py  test_shadow.py  test_shadow_callbacks.py
